<resources>
    <string name="app_name">Scooter Sharing</string>
    <string name="start_ride_button">Start ride</string>
    <string name="update_ride_button">Update ride</string>

    <string name="text_location"> Input your location</string>
    <string name="text_name"> Input the scooter name</string>

    <string name="text_location_update"> The current location</string>
    <string name="text_name_update">The current scooter name</string>

    <string name="Login">Login</string>
    <string name="Sign_up">Sign Up</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirmation">Confirm Password</string>

    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="settings">Settings</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="confirm_password">Confirm old password</string>

    <string name="payment_settings">Payment settings</string>
    <string name="apply_changes">Apply changes</string>
    <string name="card_number">Card number</string>
    <string name="cvc">CVC</string>
    <string name="exp_date">Expiration date</string>

    <string name="reserve_button">Reserve scooter</string>
    <string name="update_image">Update Scooter Image</string>
    <string name="go_to_map">Show on map</string>
    <string name="choose_scooter">Select or input the chosen scooter</string>

    <string name="my_rides_info">Previous rides</string>
    <string name="all_rides_info">Available rides</string>

    <string name="my_rides_button">My rides</string>
    <string name="all_rides_button">All rides</string>
    <string name="qr_scan_prompt">Scan the chosen scooter</string>
    <string name="delete_card_information">Delete card information</string>

    <string name="dont_have_a_user_sign_up">Don\'t have a user? <u>Sign up here</u></string>
    <string name="already_have_user_login">Already have a user? <u>Login here</u></string>
    <string name="image_for_the_scooter">Image for the scooter</string>
    <string name="search_here">Search Here</string>
    <string name="available">Available</string>
    <string name="reserved">Reserved</string>
    <string name="unavailable">Unavailable</string>
    <string name="cph001">Cph001</string>
    <string name="placeholder_date">01/01/2023 – 10:10</string>
    <string name="placeholder_location">ITU</string>
    <string name="arrow">arrow</string>
    <string name="rides">Rides</string>
    <string name="map">Map</string>
    <string name="my_profile">My Profile</string>
    <string name="qrcode_square">QRCode square</string>
</resources>