<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:background="@drawable/outline" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/baseline_electric_scooter_24"
        android:scaleType="centerInside"
        android:scaleX="2"
        android:scaleY="2"
        android:paddingStart="20dp"
        app:tint="@color/light_grey"
        android:contentDescription="@string/image_for_the_scooter" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cph001"
            android:textColor="@color/light_grey"
            android:textSize="22sp"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_date"
            android:textColor="@color/light_grey"
            android:textSize="15sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_location"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/light_grey"
            android:paddingStart="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/light_grey"
                android:paddingHorizontal="10dp"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/baseline_arrow_right_alt_24"
                android:contentDescription="@string/arrow"
                app:tint="@color/light_grey" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/light_grey"
                android:paddingHorizontal="10dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>