<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_my_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:orientation="vertical"
    tools:context=".controller.MyProfileFragment">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:layout_gravity="start"
        android:layout_margin="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:drawableEnd="@drawable/baseline_logout_24" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/settings"
        android:textColor="@color/mid_grey"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/app_name"
        android:textColor="@color/mid_grey"
        android:textStyle="bold"
        android:layout_marginBottom="25dp"
        app:drawableTopCompat="@drawable/baseline_electric_scooter_24" />

    <TextView
        android:id="@+id/edit_text_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/mid_grey"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="50dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:color="@color/mid_grey"
            android:hint="@string/change_email"
            android:textColorHint="@color/mid_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_change_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:color="@color/mid_grey"
                android:drawableLeft="@android:drawable/sym_action_email"
                android:drawableTint="@color/mid_grey"
                android:textColor="@color/light_grey" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="50dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:color="@color/mid_grey"
            android:hint="@string/change_password"
            android:textColorHint="@color/mid_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:color="@color/mid_grey"
                android:drawableLeft="@drawable/baseline_key_24"
                android:inputType="textPassword"
                android:textColor="@color/light_grey" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="50dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:color="@color/mid_grey"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/mid_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:color="@color/mid_grey"
                android:drawableLeft="@drawable/baseline_key_24"
                android:inputType="textPassword"
                android:textColor="@color/light_grey" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <Button
        android:id="@+id/payment_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:background="@drawable/button"
        android:drawableLeft="@drawable/baseline_credit_card_24"
        android:scaleX="1"
        android:text="@string/payment_settings"
        android:textColor="@color/dark_grey"
        android:visibility="visible" />


    <Button
        android:id="@+id/apply_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button"
        android:drawableLeft="@drawable/baseline_check_24"
        android:scaleX="1"
        android:text="@string/apply_changes"
        android:textColor="@color/dark_grey"
        android:visibility="visible" />

</LinearLayout>