<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent">

<!--fragment to display our maps-->
    <androidx.fragment.app.FragmentContainerView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        tools:context=".controller.MapsFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:background="@color/dark_grey"
        android:layout_marginTop="25dp"/>

    <!-- Search view to search our location -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <AutoCompleteTextView
            android:id="@+id/idAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/search_view_design"
            android:hint="@string/search_here"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="#000"
            android:drawableEnd="@drawable/baseline_clear_24"
            android:dropDownAnchor="@id/idAutoCompleteTextView"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/legend_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="8dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/legend_background"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/scooter_available"
                android:contentDescription="@string/image_for_the_scooter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/scooter_reserved"
                android:contentDescription="@string/image_for_the_scooter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reserved"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/scooter_unavailable"
                android:contentDescription="@string/image_for_the_scooter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unavailable"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>