<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/dark_grey"
    tools:context=".controller.LoginFragment"
    android:id="@+id/fragment_login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:scaleX="2"
        android:scaleY="2"
        android:textStyle="bold"
        android:color="@color/light_grey"
        android:textColor="@color/mid_grey"
        app:drawableTopCompat="@drawable/baseline_electric_scooter_24"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:color="@color/mid_grey"
            android:textColorHint="@color/mid_grey"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                android:color="@color/mid_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_grey"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawableTint="@color/mid_grey" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:paddingHorizontal="50dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:color="@color/mid_grey"
            android:textColorHint="@color/mid_grey"
            android:hint="@string/prompt_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:color="@color/mid_grey"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/light_grey"
                android:drawableLeft="@drawable/baseline_key_24" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:text="@string/Login"
        android:textColor="@color/dark_grey"
        android:scaleX="1"
        android:layout_margin="5dp"
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:background="@drawable/button"
        android:drawableLeft="@drawable/baseline_person_24"
        />

    <com.google.android.material.button.MaterialButton
        android:text="@string/dont_have_a_user_sign_up"
        android:textStyle="italic"
        android:textAllCaps="false"
        android:textColor="@color/mid_grey"
        android:scaleX="1"
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="visible"
        android:background="@android:color/transparent"
        />

</LinearLayout>