<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_grey"
    android:padding="16dp">

    <ImageView
        android:id="@+id/scooter_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/image_for_the_scooter" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/picture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="@drawable/button"
        android:text="@string/update_image"
        android:padding="10dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/scooter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"
        android:textColor="@color/mid_grey"
        android:textStyle="bold"
        tools:text="Name" />

    <TextView
        android:id="@+id/scooter_timestamp"
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_height="wrap_content"
        android:textColor="@color/mid_grey"
        android:gravity="center"
        tools:text="01/01/2023 18:30" />

    <TextView
        android:id="@+id/scooter_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="12dp"
        android:textColor="@color/mid_grey"
        android:gravity="center"
        tools:text="ITU" />

    <TextView
        android:id="@+id/scooter_reserved"
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/mid_grey"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reserve_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/button"
            android:text="@string/reserve_button"
            android:padding="10dp"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_ride_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/button"
            android:text="@string/start_ride_button"
            android:padding="10dp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <TextView
        android:id="@+id/ride_clock"
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/mid_grey"
        android:gravity="center"
        tools:text="12:34:56" />


</LinearLayout>