<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/dark_grey"
    tools:context=".controller.MainFragment"
    android:id="@+id/fragment_main">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:scaleX="2"
        android:scaleY="2"
        android:textStyle="bold"
        android:color="@color/light_grey"
        android:textColor="@color/mid_grey"
        app:drawableTopCompat="@drawable/baseline_electric_scooter_24" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <com.google.android.material.button.MaterialButton
        android:text="@string/start_ride_button"
        android:textColor="@color/dark_grey"
        android:scaleX="1"
        android:layout_margin="5dp"
        android:id="@+id/start_ride_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:background="@drawable/button"
        android:drawableLeft="@drawable/baseline_start_24"
        />
    <Button
        android:text="@string/update_ride_button"
        android:textColor="@color/dark_grey"
        android:scaleX="1"
        android:layout_margin="5dp"
        android:id="@+id/update_ride_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:background="@drawable/button"
        android:drawableLeft="@drawable/baseline_update_24"
        />
    <Button
        android:text="Show rides"
        android:textColor="@color/dark_grey"
        android:scaleX="1"
        android:layout_margin="5dp"
        android:id="@+id/show_rides_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:background="@drawable/button"
        android:drawableLeft="@drawable/baseline_list_24"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="15dp"
        android:id="@+id/recycler_view"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:divider="@color/mid_grey"
        />
</LinearLayout>